Development Portal (2018-05-16 shi)
==============================
Updated 'outgoing commitments' text in table headers and footer
Updated translation


Development Portal (2018-04-26 shi)
==============================
Added target and actual default text for result in SAVi
Added empty_flag for non-CRS country portals
Added policy-marker vocab, code, significance codelist
Display policy-marker in SAVi
Updated footer text about IATI


Development Portal (2018-04-06 shi)
==============================
Update landing page design
Update hover state for buttons
Clean up view_search
Update table hover states
Minor css fixes
Update all themes css


Development Portal (2018-04-03 shi)
==============================
Updated IATI Publisher link text
Added title hover state for link
Update 'Home' text for all profiles
Update all translations


Development Portal (2018-03-19 shi)
==============================
Update stats css
Update registry link into chunk
Fix all theme background colours for data_quality page


Development Portal (2018-03-18 shi)
==============================
Update Dash css
Added arrow to registry link


Development Portal (2018-03-17 shi)
==============================
Cleanup Dash data quality tables
Added IATI Registry links to Dash


Development Portal (2018-03-16 shi)
==============================
Add publisher link to IATI Registry on all pages
Updated footer with new email text and information
Updated all translations for updated email text
Fix table error messages to expand across colspan
Fix activity tables layout
Updated Print-friendly css
Updated all themes css
Updated footer email with subject
Updated site-wide emails with subject
Publisher link opens in new window


Development Portal (2018-03-15 shi)
==============================
Fixed result period dates to display even when there is no data
Added % to baseline in original theme
Updated 100percent time bar
Fixed new database logs link in Savi
Updated Print-friendly css