@@ -415,9 +415,9 @@ ul.chosen-choices	{border-radius:6px;}
 
 /*	Table header styles
 	============================================= */
-th.titles					{color:#CCC; text-align:left; padding:15px 0 15px 20px; border-bottom:1px solid #333642;}
+th.titles					{color:#CCC; text-align:left; vertical-align:bottom; padding:15px 0 15px 20px; border-bottom:1px solid #333642;}
 th.titles:nth-child(1), th.titles:nth-child(3), th.titles:nth-child(4),
-th.titles:last-child		{padding:15px 20px 10px 0; text-align:right; font-size:0.9em; line-height:1.25em;}
+th.titles:last-child		{padding:15px 20px 10px 20px; text-align:right; font-size:0.9em; line-height:1.25em;}
 th.titles:last-child		{min-width:120px; padding-left:20px;}
 
 
@@ -560,12 +560,12 @@ table.activity th:hover	{cursor:default;}
 table.activity tr:last-child td	{border:0;}
 table.activity tr:hover	{background-color:rgba(0,0,0,0.4);}
 table.activity tr:first-child:hover	{background-color:transparent;}
-table.activity td.num	{padding:10px 0 10px 20px; font-size:1.0em; line-height:1.75em;}
-table.activity td.title	{padding:0 30px 0 0;}
-table.activity td.title.missing	{width:600px; max-width:600px;}
-table.activity td.value	{text-align:right; padding:10px 20px 25px 20px; font-size:1.0em; line-height:1.75em;}
+table.activity td.num	{padding:10px 0 10px 20px; font-size:1.0em; line-height:1.75em; width:5%;}
+table.activity td.title	{padding:0; width:60%;}
+table.activity td.value	{text-align:right; padding:10px 20px 25px 20px; font-size:1.0em; line-height:1.75em; width:20%;}
 table.activity td.count	{text-align:right; padding:10px 20px 0 40px; font-size:1.7em; line-height:1.0em;}
-table.activity td.date	{text-align:right; padding:10px 20px 10px 10px; white-space:nowrap; font-size:1.0em; line-height:1.75em;}
+table.activity td.date	{text-align:right; padding:10px 20px; white-space:nowrap; font-size:1.0em; line-height:1.75em; width:15%;}
+table.activity td.date.missing_date		{width:10%;}
 table.activity td.alert_no_iati	{text-align:center; font-size:1.6em; padding:40px; cursor:default;}
 table.activity td span	{display:block; padding:2px 0 3px 0; color:#999; font-size:0.7em; line-height:1.25em; width:100%;}
 table.activity td span.currency {display:inline; line-height:2.5em; padding:0 0 0 5px;}
