@@ -38,9 +38,9 @@ a.crumb:hover			{color:rgba(255,255,255,1);}
 
 /*	About data links
 	============================================= */
-a.about_data			{color:rgba(136,136,136,1);}
+a.about_data			{color:rgba(85,85,85,1);}
 a.about_data:hover		{color:rgba(85,85,85,1);}
-a.about_data.quality	{border-left:1px solid rgba(136,136,136,1);}
+a.about_data.quality	{border-left:1px solid rgba(85,85,85,1);}
 
 
 /*	Header styles
@@ -116,7 +116,7 @@ a.stats_link.missing span	{color:rgba(255,255,255,1);}
 	============================================= */
 .description_wrap		{background:transparent;}
 .description.data_quality_wrap	{background-color:rgba(255,255,255,1); border-radius:8px;}
-.description span.title	{color:rgba(136,136,136,1); border-bottom:1px solid rgba(199,199,199,1);}
+.description span.title	{color:rgba(85,85,85,1); border-bottom:1px solid rgba(199,199,199,1);}
 .description p			{color:rgba(78,78,78,1);}
 .description a			{color:rgba(163,0,13,1);}
 .description a:hover	{color:rgba(186,12,47,1);}
@@ -142,8 +142,8 @@ a.csv_download:hover		{background-color:rgba(163,0,13,1); color:rgba(255,255,255
 
 /*	For url #view=donor_activities
 	============================================= */
-.donor_activities_spend			{color:rgba(136,136,136,1);}
-.donor_activities_percent_max	{background-color:rgba(0,0,0,1); border:1px solid rgba(136,136,136,1);}
+.donor_activities_spend			{color:rgba(85,85,85,1);}
+.donor_activities_percent_max	{background-color:rgba(0,0,0,1); border:1px solid rgba(85,85,85,1);}
 .donor_activities_percent		{background-color:rgba(186,12,47,1);}
 
 
@@ -154,7 +154,7 @@ a.csv_download:hover		{background-color:rgba(163,0,13,1); color:rgba(255,255,255
 
 /*	For url #view=search
 	============================================= */
-.search_label				{color:rgba(85,85,85,1); border-bottom:1px solid rgba(136,136,136,1);}
+.search_label				{color:rgba(85,85,85,1); border-bottom:1px solid rgba(85,85,85,1);}
 #search_div					{color:rgba(85,85,85,1);}
 a#search_link				{background-color:rgba(186,12,47,1); color:rgba(255,255,255,1);}
 a#search_link span			{color:rgba(255,255,255,1);}
@@ -181,7 +181,7 @@ a#search_link:hover			{background-color:rgba(163,0,13,1);}
 .search_cont a:active		{color:rgba(186,12,47,1);}
 .search.head				{color:rgba(85,85,85,1);}
 .search_query				{color:rgba(85,85,85,1);}
-.search_query span			{color:rgba(136,136,136,1);}
+.search_query span			{color:rgba(85,85,85,1);}
 .search_query span img		{-webkit-filter:brightness(50%); filter:brightness(50%);}
 a.search_refine				{border:1px solid rgba(186,12,47,1); text-shadow:initial; background:none;}
 a.search_refine:hover		{border:1px solid rgba(186,12,47,1); text-shadow:initial; background:none;}
@@ -189,7 +189,7 @@ a.search_refine:hover		{border:1px solid rgba(186,12,47,1); text-shadow:initial;
 
 /*	Table header styles
 	============================================= */
-th.titles					{color:rgba(136,136,136,1); border-bottom:1px solid rgba(56,56,56,1);}
+th.titles					{color:rgba(85,85,85,1); border-bottom:1px solid rgba(56,56,56,1);}
 
 
 /*	Table for Header logo and Translations
@@ -213,8 +213,8 @@ table.title td.sort		{color:rgba(85,85,85,1);}
 /*	Table for Active / Ended projects
 	============================================= */
 table.list tr:hover		{background-color:rgba(255,255,255,0);}
-table.list td			{color:rgba(136,136,136,1); border-bottom:1px solid rgba(231,231,231,1);}
-table.list td span		{color:rgba(153,153,153,1);}
+table.list td			{color:rgba(85,85,85,1); border-bottom:1px solid rgba(231,231,231,1);}
+table.list td span		{color:rgba(85,85,85,1);}
 table.list tr:hover a	{color:rgba(186,12,47,1);}
 table.list a			{color:rgba(85,85,85,1);}
 table.list a:focus		{color:rgba(186,12,47,1);}
@@ -280,7 +280,7 @@ table.money.publishers th.col2	{border-top:1px solid rgba(199,199,199,1);}
 /*	Table for Activities list (Donors / Sectors)
 	============================================= */
 table.activity tr:hover	{background-color:rgba(0,0,0,0);}
-table.activity td		{color:rgba(136,136,136,1); border-bottom:1px solid rgba(231,231,231,1);}
+table.activity td		{color:rgba(85,85,85,1); border-bottom:1px solid rgba(231,231,231,1);}
 table.activity td span	{color:rgba(153,153,153,1);}
 table.activity tr:hover a		{color:rgba(186,12,47,1);}
 table.activity a	  	{color:rgba(85,85,85,1);}
@@ -321,45 +321,45 @@ a.data_invest:hover		{color:rgba(255,255,255,1); background-color:rgba(163,0,13,
 /*	SAVi CSS
 	============================================= */
 iati-activity			{background-color:rgba(255,255,255,1); border-radius:8px;}
-iati-activity:after 	{color:rgba(136,136,136,1);}
+iati-activity:after 	{color:rgba(85,85,85,1);}
 
 
 /*	Project title
 	============================================= */
 span.span_span-title span-title		 			{color:rgba(85,85,85,1);}
-span.span_span-title span-title:before 			{color:rgba(136,136,136,1);}
+span.span_span-title span-title:before 			{color:rgba(85,85,85,1);}
 
 
 /*	IATI Identifier
 	============================================= */
 iati-identifier 				{background-color:rgba(235, 235, 235, 0.6); color:rgba(186,12,47,1);}
-iati-identifier:before			{color:rgba(136,136,136,1);}
+iati-identifier:before			{color:rgba(85,85,85,1);}
 iati-identifier:hover			{color:rgba(163,0,13,1);}
 a.a_xml_iati-identifier:link	{color:rgba(186,12,47,1);}
 a.a_xml_iati-identifier:visited	{color:rgba(186,12,47,1);}
 a.a_xml_iati-identifier:hover	{color:rgba(163,0,13,1);}
 a.a_xml_iati-identifier:active	{color:rgba(186,12,47,1);}
-a.a_xml_iati-identifier:before	{color:rgba(136,136,136,1);}
+a.a_xml_iati-identifier:before	{color:rgba(85,85,85,1);}
 a.a_logs						{color:rgba(186,12,47,1);}
 a.a_logs:link					{color:rgba(186,12,47,1);}
 a.a_logs:visited				{color:rgba(186,12,47,1);}
 a.a_logs:hover					{color:rgba(163,0,13,1);}
 a.a_logs:active					{color:rgba(186,12,47,1);}
-a.a_logs:before					{color:rgba(136,136,136,1);}
+a.a_logs:before					{color:rgba(85,85,85,1);}
 a.a_slug						{color:rgba(186,12,47,1);}
 a.a_slug:link					{color:rgba(186,12,47,1);}
 a.a_slug:visited				{color:rgba(186,12,47,1);}
 a.a_slug:hover					{color:rgba(163,0,13,1);}
 a.a_slug:active					{color:rgba(186,12,47,1);}
-a.a_slug:before					{color:rgba(136,136,136,1);}
+a.a_slug:before					{color:rgba(85,85,85,1);}
 
 
 /*	Recipient countries
 	============================================= */
 span.span_recipient-country				{background-color:rgba(255,255,255,1);}
-span.span_recipient-country:before 		{color:rgba(136,136,136,1);}
+span.span_recipient-country:before 		{color:rgba(85,85,85,1);}
 recipient-country span					{color:rgba(85,85,85,1);}
-recipient-country span:nth-of-type(2)	{color:rgba(136,136,136,1);}
+recipient-country span:nth-of-type(2)	{color:rgba(85,85,85,1);}
 
 span.country_img:before {color:rgba(255,255,255,1); background-color:rgba(186,12,47,1);}
 img.country_pie			{background-color:rgba(255,255,255,1);}
@@ -378,13 +378,13 @@ activity-date[type="4"]:before, activity-date[type="end-actual"]:before	{color:r
 /*	Who's invloved?
 	============================================= */
 span.span_participating-org	 					{color:rgba(85,85,85,1); background-color:rgba(255,255,255,1);}
-span.span_participating-org:before 				{color:rgba(136,136,136,1);}
+span.span_participating-org:before 				{color:rgba(85,85,85,1);}
 participating-org, span-narrative.participating-role	{color:rgba(85,85,85,1);}
 
 participating-org[role="1"] narrative:nth-of-type(1):after, participating-org[role="funding" i] narrative:nth-of-type(1):after,
 participating-org[role="2"] narrative:nth-of-type(1):after, participating-org[role="accountable" i] narrative:nth-of-type(1):after,
 participating-org[role="3"] narrative:nth-of-type(1):after, participating-org[role="extending" i] narrative:nth-of-type(1):after,
-participating-org[role="4"] narrative:nth-of-type(1):after, participating-org[role="implementing" i] narrative:nth-of-type(1):after	{color:rgba(136,136,136,1);}
+participating-org[role="4"] narrative:nth-of-type(1):after, participating-org[role="implementing" i] narrative:nth-of-type(1):after	{color:rgba(85,85,85,1);}
 
 participating-org a:link	{color:rgba(186,12,47,1);}
 participating-org a:visited	{color:rgba(186,12,47,1);}
@@ -397,14 +397,14 @@ participating-org a:active	{color:rgba(186,12,47,1);}
 span.span_location,
 span.span_location location name,
 span.span_location location	{color:rgba(85,85,85,1);}
-span.span_location:before	{color:rgba(136,136,136,1);}
-span.span_location location point > *	{color:rgba(136,136,136,1);}
+span.span_location:before	{color:rgba(85,85,85,1);}
+span.span_location location point > *	{color:rgba(85,85,85,1);}
 
 
 /*	Reported by
 	============================================= */
 reporting-org 				{color:rgba(85,85,85,1);}
-reporting-org:before 		{color:rgba(136,136,136,1);}
+reporting-org:before 		{color:rgba(85,85,85,1);}
 reporting-org a:link		{color:rgba(186,12,47,1);}
 reporting-org a:visited		{color:rgba(186,12,47,1);}
 reporting-org a:hover		{color:rgba(163,0,13,1);}
@@ -414,28 +414,28 @@ reporting-org a:active		{color:rgba(186,12,47,1);}
 /*	Description of project (shared with Transaction table)
 	============================================= */
 span.span_description description 						{color:rgba(85,85,85,1);}
-span.span_description description:nth-of-type(1):before	{color:rgba(136,136,136,1);}
-span.span_description description[type="1"]:before		{color:rgba(136,136,136,1);}
-span.span_description description[type="2"]:before		{color:rgba(136,136,136,1);}
-span.span_description description[type="3"]:before		{color:rgba(136,136,136,1);}
+span.span_description description:nth-of-type(1):before	{color:rgba(85,85,85,1);}
+span.span_description description[type="1"]:before		{color:rgba(85,85,85,1);}
+span.span_description description[type="2"]:before		{color:rgba(85,85,85,1);}
+span.span_description description[type="3"]:before		{color:rgba(85,85,85,1);}
 
 
 /*	Result and description
 	============================================= */
 result:nth-child(even)		{background-color:rgba(235,235,235,0.3);}
 span.span_result:before		{color:rgba(255,255,255,1); background-color:rgba(186,12,47,1);}
-span-reference:before		{color:rgba(136,136,136,1);}
+span-reference:before		{color:rgba(85,85,85,1);}
 result:last-of-type			{border-radius:0 0 4px 4px;}
 result description, result description narrative	{color:rgba(85,85,85,1);}
-result description:before	{color:rgba(136,136,136,1);}
+result description:before	{color:rgba(85,85,85,1);}
 result span-title			{color:rgba(85,85,85,1);}
-result span-title:before	{color:rgba(136,136,136,1);}
-result:before				{color:rgba(136,136,136,1);}
-result indicator:before		{color:rgba(136,136,136,1);}
+result span-title:before	{color:rgba(85,85,85,1);}
+result:before				{color:rgba(85,85,85,1);}
+result indicator:before		{color:rgba(85,85,85,1);}
 
 result indicator period period-start, result indicator period period-end, result indicator period target, result indicator period actual,
 result indicator description			{color:rgba(85,85,85,1);}
-result indicator period period-start:before, result indicator period period-end:before	{color:rgba(136,136,136,1);}
+result indicator period period-start:before, result indicator period period-end:before	{color:rgba(85,85,85,1);}
 
 result indicator period baseline:before, result indicator period target:before, result indicator period actual:before,
 result indicator[measure="1"] period target:before, result indicator[measure="2"] period target:before,
@@ -454,8 +454,8 @@ result indicator[measure="2"] period target:after,
 result indicator[measure="2"] period actual:after	{color:rgba(255,255,255,1);}
 
 result indicator reference span-narrative	{color:rgba(85,85,85,1);}
-span-narrative.reference-vocabulary:before	{color:rgba(136,136,136,1);}
-span-narrative.reference-code:before		{color:rgba(136,136,136,1);}
+span-narrative.reference-vocabulary:before	{color:rgba(85,85,85,1);}
+span-narrative.reference-code:before		{color:rgba(85,85,85,1);}
 
 result a.a_reference reference,
 result a.a_reference reference:after		{color:rgba(163,0,13,1);}
@@ -480,9 +480,9 @@ span.span_sector sector[vocabulary="1"]		{color:rgba(85,85,85,1);}
 span.span_sector sector:nth-child(even)		{background-color:rgba(235,235,235,0.6);}
 span.span_sector sector[vocabulary="DAC"]:before, 
 span.span_sector sector[vocabulary="1"]:before,
-span.span_sector sector[vocabulary="2"]:before	{color:rgba(136,136,136,1);}
+span.span_sector sector[vocabulary="2"]:before	{color:rgba(85,85,85,1);}
 sector span, span.span_sector sector span	{color:rgba(85,85,85,1);}
-span.span_sector sector span:nth-of-type(2)	{color:rgba(136,136,136,1);}
+span.span_sector sector span:nth-of-type(2)	{color:rgba(85,85,85,1);}
 img.sector_pie			{background-color:rgba(255,255,255,1);}
 
 
@@ -491,10 +491,10 @@ img.sector_pie			{background-color:rgba(255,255,255,1);}
 budget					{border-top:1px solid rgba(235,235,235,1);}
 budget:last-of-type	 	{border-bottom:1px solid rgba(255,255,255,1);}
 span.span_budget:before						{color:rgba(255,255,255,1); background-color:rgba(186,12,47,1);}
-budget:nth-of-type(1) period-start:before 	{color:rgba(136,136,136,1);}
-budget:nth-of-type(1) period-end:before	  	{color:rgba(136,136,136,1);}
-budget:nth-of-type(1) value:before		  	{color:rgba(136,136,136,1);}
-budget:nth-of-type(1) period-end:after		{color:rgba(136,136,136,1);}
+budget:nth-of-type(1) period-start:before 	{color:rgba(85,85,85,1);}
+budget:nth-of-type(1) period-end:before	  	{color:rgba(85,85,85,1);}
+budget:nth-of-type(1) value:before		  	{color:rgba(85,85,85,1);}
+budget:nth-of-type(1) period-end:after		{color:rgba(85,85,85,1);}
 budget[type="1"] value:after,
 budget[type="2"] value:after,
 budget[type="1"]:nth-of-type(1) value:after,
@@ -520,7 +520,7 @@ planned-disbursement:nth-of-type(1) period-end:before,
 planned-disbursement:nth-of-type(1) value:before,
 planned-disbursement:nth-of-type(1) provider-org:before,
 planned-disbursement:nth-of-type(1) receiver-org:before,
-planned-disbursement:nth-of-type(1) period-end:after		{color:rgba(136,136,136,1);}
+planned-disbursement:nth-of-type(1) period-end:after		{color:rgba(85,85,85,1);}
 
 planned-disbursement[type="1"] value:after,
 planned-disbursement[type="2"] value:after,
@@ -545,12 +545,12 @@ transaction a:active			{color:rgba(163,0,13,1);}
 transaction:last-of-type		{border-bottom:0px solid rgba(143,143,143,1);}
 span.span_transaction:before	{color:rgba(255,255,255,1); background-color:rgba(186,12,47,1);}
 
-transaction:nth-of-type(1) transaction-date:before	{color:rgba(136,136,136,1);}
-transaction:nth-of-type(1) transaction-type:before	{color:rgba(136,136,136,1);}
-transaction:nth-of-type(1) provider-org:before		{color:rgba(136,136,136,1);}
-transaction:nth-of-type(1) receiver-org:before		{color:rgba(136,136,136,1);}
-transaction:nth-of-type(1) value:before				{color:rgba(136,136,136,1);}
-span.span_transaction transaction:nth-of-type(1) description:nth-of-type(1):before {color:rgba(136,136,136,1);}
+transaction:nth-of-type(1) transaction-date:before	{color:rgba(85,85,85,1);}
+transaction:nth-of-type(1) transaction-type:before	{color:rgba(85,85,85,1);}
+transaction:nth-of-type(1) provider-org:before		{color:rgba(85,85,85,1);}
+transaction:nth-of-type(1) receiver-org:before		{color:rgba(85,85,85,1);}
+transaction:nth-of-type(1) value:before				{color:rgba(85,85,85,1);}
+span.span_transaction transaction:nth-of-type(1) description:nth-of-type(1):before {color:rgba(85,85,85,1);}
 
 transaction-date	{color:rgba(85,85,85,1);}
 transaction-type	{color:rgba(85,85,85,1);}
@@ -558,7 +558,7 @@ span.span_transaction transaction description:nth-of-type(1) {color:rgba(85,85,8
 provider-org		{color:rgba(85,85,85,1);}
 receiver-org		{color:rgba(85,85,85,1);}
 value				{color:rgba(85,85,85,1);}
-value span			{color:rgba(136,136,136,1);}
+value span			{color:rgba(85,85,85,1);}
 
 
 /*	Contact info for Publisher
@@ -590,35 +590,44 @@ activity-status:before		{color:rgba(255,255,255,1);}
 
 /*	Related documents list
 	============================================= */
-span.span_document-link:before				{color:rgba(136,136,136,1);}
-a.a_document-link							{color:rgba(136,136,136,1); background-color:rgba(255,255,255,1); border:1px solid rgba(163,0,13,1); border-bottom:0;}
+span.span_document-link:before				{color:rgba(85,85,85,1);}
+a.a_document-link							{color:rgba(85,85,85,1); background-color:rgba(255,255,255,1); border:1px solid rgba(163,0,13,1); border-bottom:0;}
 a.a_document-link::before					{border:1px solid rgba(163,0,13,1); color:rgba(163,0,13,1);}
 a.a_document-link:last-of-type				{border-bottom:1px solid rgba(163,0,13,1);}
 a.a_document-link:hover						{background-color:rgba(255,255,255,1);}
 a.a_document-link document-link span-title	{color:rgba(85,85,85,1);}
-document-link span							{color:rgba(136,136,136,1);}
+document-link span							{color:rgba(85,85,85,1);}
 a.a_document-link span-title:after			{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.4);}
 span-narrative.doc-cat						{color:rgba(255,255,255,1); background-color:rgba(15,15,15,0.4);}
 
 
 /*	Family Tree list
 	============================================= */
-span.span_related-activity:before	{color:rgba(136,136,136,1);}
+span.span_related-activity:before	{color:rgba(85,85,85,1);}
 span.span_related-activity			{color:rgba(85,85,85,1);}
 a.a_related-activity				{color:rgba(85,85,85,1);}
 related-activity					{color:rgba(85,85,85,1);}
 related-activity:hover				{color:rgba(163,0,13,1);}
-related-activity:before				{color:rgba(136,136,136,1);}
+related-activity:before				{color:rgba(85,85,85,1);}
+
+
+/*	Policy marker
+	============================================= */
+span.span_policy-marker:before		{color:rgba(85,85,85,1);}
+policy-marker						{color:rgba(85,85,85,1);}
+span-narrative.policy_vocab,
+span-narrative.policy_code,
+span-narrative.policy_sig			{color:rgba(255,255,255,1);}
 
 
 /*	Hide and expand buttons
 	============================================= */
-span.hide 		 {color:rgba(136,136,136,1);}
+span.hide 		 {color:rgba(85,85,85,1);}
 span.hide:hover	 {color:rgba(163,0,13,1);}
 
 span.span_transaction span.hide, span.span_planned-disbursement span.hide, span.span_budget span.hide,
 span.span_result span.hide			{color:rgba(204,204,204,1);}
-span.span_result result span.hide	{color:rgba(136,136,136,1);}
+span.span_result result span.hide	{color:rgba(85,85,85,1);}
 span.span_transaction span.hide:hover, span.span_planned-disbursement span.hide:hover, span.span_budget span.hide:hover,
 span.span_result span.hide:hover	{color:rgba(255,255,255,1);}
 
