@@ -404,10 +404,10 @@ Click to explore IATI budget data in this sector for {year3}
 Click to explore IATI budget data in this sector for {year4}
 
 #table_active_date_tip_text
-Date ending
+End Date
 
 #table_ended_date_tip_text
-Date ended
+End Date
 
 #list_publishers_text
 Click to explore all projects reported by this publisher
