@@ -404,7 +404,7 @@ Cliquez pour découvrir les activités de secteur pour {year3}
 Cliquez pour découvrir les activités de secteur pour {year4}
 
 #table_active_date_tip_text 
-Date de fin 
+Date de fin
 
 #table_ended_date_tip_text 
 Date de fin
