@@ -407,7 +407,7 @@ Haga clic para explorar actividades para el {year4}
 Fecha final 
 
 #table_ended_date_tip_text 
-Fecha terminado
+Fecha final
 
 #list_publishers_text 
 Haga clic para explorar todos los proyectos notificados por este editor 
