@@ -43,14 +43,14 @@
 #missing_projects_data
 <tr onclick="return ctrack.url('#view=act&aid={aid}');">
 	<td class="num">{num}.</td>
-	<td class="title missing">
+	<td class="title">
 		<a>
 			{title}
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="date" title="{date_start_tip_text}">{date_start}</td>
-	<td class="date" title="{date_end_tip_text}">{date_end}</td>
+	<td class="date missing_date" title="{date_start_tip_text}">{date_start}</td>
+	<td class="date missing_date" title="{date_end_tip_text}">{date_end}</td>
 	<td class="value">
 		<div class="activities_spend_wrap">
 			<div class="activities_spend" title="{activities_spend_text}">{commitment}<span class="currency">{currency}</span></div>
