@@ -2,6 +2,10 @@ Development Portal (2018-05-16 shi)
 ==============================
 Updated 'outgoing commitments' text in table headers and footer
 Updated translation
+Add policy-marker css to all themes
+Update css for activity table headers
+Update missing view
+Update print-friendly css
 
 
 Development Portal (2018-04-26 shi)
